--- a/src/App.css
+++ b/src/App.css
@@ -45,37 +45,46 @@
 .divCartItems2{
   display: flex;
   justify-content: space-between;
-  font-family: 'Franklin Gothic Medium';
-  color: rgb(155, 97, 179);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(106, 25, 138);
   border: 3px solid rgb(155, 97, 179);
   border-radius: 10px;
   width: 700px;
   height: 80px;
-  margin: 3rem 0 0.5rem 0;
+}
+.divCartItems3{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 1rem;
 }
 .imgCartItems{
-  padding-left: 3rem;
+  padding-left: 2rem;
 }
 .h2CartItems{
   font-size: 30px;
-  padding-left: 3rem;
+
 }
 .parrafoCartItems{
   font-size: 18px;
-  padding-left: 2rem;
+  padding: 1rem 0 0 2rem;
+
 }
 .parrafoCartItems2{
   font-size: 18px;
-  padding-left: 2rem;
+  padding: 1rem 0 0 2rem;
 }
 .buttonCartItems{
   width: 80px;
   height: 40px;
   border-radius: 10px;
   background-color: rgb(155, 97, 179);
-  font-family: 'Franklin Gothic Medium';
+  border: 3px solid rgb(155, 97, 179);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 15px;
-  margin: 0 0 1rem 1rem;
+  margin: 1rem 0 1rem 1rem;
+  color: black;
 }
 
 /*cartWidget.jsx*/
@@ -90,6 +99,7 @@
   margin-right: 2rem;
 }
 .h4Widget{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: black;
   font-size: 20px;
   margin-right: 3rem;
@@ -100,11 +110,17 @@
 .cardItem{
   width: 18rem;
   border-radius: 18px;
-  font-family: 'Franklin Gothic Medium';
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border-radius: 10px;
+  background-color: rgb(155, 97, 179);
 
 }
 .cardText{
   font-size: 12px;
+}
+.buttonCardItem{
+  border-radius: 10px;
+  background-color: rgb(155, 97, 179);
 }
 
 /*ItemCount.jsx*/
@@ -120,21 +136,24 @@
   height: 30px;
   border-radius: 10px;
   background-color: rgb(155, 97, 179);
-  font-family: 'Franklin Gothic Medium';
-  font-size: 15px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 18px;
   margin-right: 1rem;
+  color: black;
 }
 .spanCount{
-  font-family: 'Franklin Gothic Medium';
-  font-size: 15px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 18px;
+  color: rgb(106, 25, 138);
 }
 .buttonCount2{
   width: 40px;
   height: 30px;
   border-radius: 10px;
   background-color: rgb(155, 97, 179);
-  font-family: 'Franklin Gothic Medium';
-  font-size: 15px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: black;
+  font-size: 18px;
   margin-left: 1rem;
 }
 .divCount2{
@@ -148,27 +167,29 @@
   border-radius: 10px;
   background-color: rgb(155, 97, 179);
   color: black;
-  font-family: 'Franklin Gothic Medium';
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 25px;
 
 }
 
 /*ItemDetail.jsx*/
-
+.divContainerDetail{
+  border: 3px solid rgb(155, 97, 179);
+  border-radius: 10px;
+  padding: 1rem;
+}
 .divDetail{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-family: 'Franklin Gothic Medium';
-  color: rgb(155, 97, 179);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(106, 25, 138);
   
 }
-.divDetail2{
 
-}
 .imgDetail{
-margin: 0 4rem 2rem 0;
+margin: 4rem 1rem 0 3rem;
 
   
 }
@@ -187,15 +208,15 @@ margin: 0 4rem 2rem 0;
 }
 
 .parrafoDetail{
-  font-size: 18px;
+  font-size: 20px;
   padding-left: 2rem;
 }
 .parrafoDetail2{
-  font-size: 18px;
+  font-size: 20px;
   padding-left: 2rem;
 }
 .parrafoDetail3{
-  font-size: 18px;
+  font-size: 20px;
   padding-left: 2rem;
 }
 .buttonDetail{
@@ -203,7 +224,8 @@ margin: 0 4rem 2rem 0;
   height: 40px;
   border-radius: 10px;
   background-color: rgb(155, 97, 179);
-  font-family: 'Franklin Gothic Medium';
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: black;
   font-size: 15px;
   margin: 0 0 1rem 1rem;
 }
@@ -212,7 +234,8 @@ margin: 0 4rem 2rem 0;
   height: 40px;
   border-radius: 10px;
   background-color: rgb(155, 97, 179);
-  font-family: 'Franklin Gothic Medium';
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: black;
   font-size: 15px;
   margin: 0 0 1rem 1rem;
 }
@@ -232,7 +255,8 @@ margin: 0 4rem 2rem 0;
   height: 40px;
   border-radius: 10px;
   background-color: rgb(155, 97, 179);
-  font-family: 'Franklin Gothic Medium';
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: black;
   font-size: 15px;
   margin: 0 0 1rem 1rem;
 }
@@ -262,8 +286,8 @@ margin: 0 4rem 2rem 0;
   display: flex;
   justify-content: center;
   color: rgb(155, 97, 179);
-  font-size: 30px;
-  font-family: 'Franklin Gothic Medium';
+  font-size: 80px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: 3rem 0 3rem 0; 
 
 }
@@ -272,24 +296,56 @@ margin: 0 4rem 2rem 0;
 /*PAGES*/
 /*Home.jsx*/
 .divHome{
-  color: rgb(155, 97, 179);
-  font-family: 'Franklin Gothic Medium';
-  font-size: 80px;
-  
-}
-.h1Home{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 3rem 0 3rem 0;
+
+  
+}
+.h1Home{
+  color: rgb(155, 97, 179);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 90px;
 }
 .imgHome{
-margin: 0 0 3rem 8rem;
+
 }
 
 
 /*VIEWS*/
 /*Cart.jsx*/
+.divCart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 3px solid rgb(155, 97, 179);
+  border-radius: 10px;
+  margin: 6rem 10rem 0 10rem;
+  background-color: lightpink;
+}
+.h2Cart{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+  font-size: 40px;
+  color: rgb(106, 25, 138);
+  margin-top: 2rem;
+}
+.h4Cart{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+  font-size: 30px;
+  color: rgb(106, 25, 138);
+}
+.buttonCart{
+  border: 3px solid rgb(155, 97, 179);
+  border-radius: 10px;
+  font-size: 20px;
+  color: black;
+  background-color: rgb(155, 97, 179);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+  margin: 1rem 0 2rem 0;
+}
+
 .h2Cart2{
   color:rgb(155, 97, 179);
   font-family: 'Franklin Gothic Medium';
@@ -303,38 +359,116 @@ margin: 0 0 3rem 8rem;
   align-items: center;
 }
 .divSpanCart{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
   border: 3px solid rgb(155, 97, 179);
   border-radius: 10px;
   margin: 0 8rem 2rem 8rem;
 }
-.spanCart{
+.divH2Cart3{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.h2Cart3{
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 2rem 0 1rem 0;
-  color:rgb(155, 97, 179);
+  color:rgb(106, 25, 138);
+  font-family: 'Franklin Gothic Medium';
+  font-size: 25px;
+  padding-bottom: 1rem;
+}
+.spanCart{
+
+  margin: 2rem 0 1rem 5rem;
+  color:rgb(106, 25, 138);
   font-family: 'Franklin Gothic Medium';
   font-size: 20px;
   padding-bottom: 1rem;
+}
+.divButtonCart2{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 .buttonCart2{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2rem 0 1rem 0;
-  color:rgb(155, 97, 179);
+  margin: 1rem 5rem 1rem 0;
+  background-color: rgb(155, 97, 179);
   font-family: 'Franklin Gothic Medium';
   font-size: 20px;
-
   border: 3px solid rgb(155, 97, 179);
   border-radius: 10px;
 }
 
-
-
-
 /*Checkout.jsx*/
+
+.divCheckout{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid rgb(155, 97, 179);
+  border-radius: 10px;
+  margin: 6rem 10rem 0 10rem;
+  background-color: lightpink;
+}
+.divH2Checkout{
+  margin: 1rem 0 3rem 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(106, 25, 138);
+  font-size: 30px;
+}
+.formCheckout{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.inputCheckout{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(106, 25, 138);
+  border: 3px solid rgb(155, 97, 179);
+  border-radius: 10px;
+  width: 30rem;
+  margin-bottom: 1rem;
+}
+.submitCheckout{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 18px;
+  color: black;
+  background-color: rgb(155, 97, 179);
+  border: 3px solid rgb(155, 97, 179);
+  border-radius: 10px;
+  width: 30rem;
+  margin-bottom: 1rem;
+}
+.divCheckout2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid rgb(155, 97, 179);
+  border-radius: 10px;
+  margin: 6rem 10rem 0 10rem;
+  background-color: lightpink;
+}
+.h2Checkout2{
+  margin: 1rem 0 2rem 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(106, 25, 138);
+  font-size: 30px;
+}
+.buttonCheckout{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 18px;
+  color: black;
+  background-color: rgb(155, 97, 179);
+  border: 3px solid rgb(155, 97, 179);
+  border-radius: 10px;
+  width: 15rem;
+  margin-bottom: 1rem;
+}
